# HDRFusion

./: Licenses.txt  README.md  Ubuntu.txt  Windows.txt
calibration/: Instruction_on_calibration.txt
calibration/calc_crf/: CMakeLists.txt  Hdr.cpp  load_inv_crf.m
calibration/crf_calibration_matlab/: calc_crf.m  calc_dev_1.m  calc_mean_std.m  collect_intensity.m  crf.yml  crf_calibration_main.m  crf_main.m  hist_loc.m  log_func.m  matlab2opencv_yml.m  obj_func.m  search.m  sum_prec.m
calibration/multi_expo_capturer/: CMakeLists.txt
calibration/multi_expo_capturer/common/: Converters.hpp  DllExportDef.h  EigenUtil.hpp  Utility.hpp
calibration/multi_expo_capturer/data/: XtionRGB.yml
calibration/multi_expo_capturer/multi_exposure_capturer/: CMakeLists.txt  Data4Viewer.cpp  Data4Viewer.h  DataLive.cpp  DataLive.h  Main.cpp  MultiViewer.cpp
calibration/multi_expo_capturer/rgbd/: Camera.cpp  Camera.h  GLUtil.cpp  GLUtil.hpp  Kinect.h  VideoSourceKinect.cpp  VideoSourceKinect.hpp
calibration/multi_expo_capturer/rgbd/cv/: common.hpp
calibration/multi_expo_capturer/rgbd/pcl/: device.hpp  internal.h  limits.hpp  vector_math.hpp
hdr_fusion/: CMakeLists.txt  Instructions_on_hdr_fusion.txt
hdr_fusion/common/: CVUtil.hpp  Converters.hpp  DllExportDef.h  EigenUtil.hpp  OtherUtil.hpp  Utility.hpp
hdr_fusion/data/: XtionIR.yml  XtionRGB.yml
hdr_fusion/data/1406120314/: crf.yml
hdr_fusion/hdr_fusion_main/: CMakeLists.txt  Data4Viewer.cpp  Data4Viewer.h  DataLive.cpp  DataLive.h  HDRFusionControl.yml  Main.cpp  MultiViewer.cpp  MultiViewer.h
hdr_fusion/rgbd/: Camera.cpp  Camera.h  CudaLib.cu  CudaLib.cuh  DVOICP.cu  DVOICP.cuh  DirectOrientation.cu  DirectOrientation.cuh  ExposureEstimation.cu  ExposureEstimation.cuh  GLUtil.cpp  GLUtil.hpp  IntrinsicAnalysis.cu  IntrinsicAnalysis.cuh  KeyFrame.cpp  KeyFrame.h  Kinect.h  KinfuTracker.cpp  KinfuTracker.h  Normal.cu  Normal.cuh  RayCasterColor.cu  RayCasterColor.cuh  TSDF.cpp  TSDF.h  Teapot.h  VideoSourceKinect.cpp  VideoSourceKinect.hpp  VolumeColor.cu  VolumeColor.cuh
hdr_fusion/rgbd/pcl/: internal.h  vector_math.hpp
